--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "startdev": "nodemon r ./bin/www",
-    "test": "mocha"
+    "test": "mocha",
+    "start_socket": "nodemon app.js"
   },
   "dependencies": {
     "ansi-escapes": "^6.0.0",
@@ -23,6 +24,7 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20",
     "prompt": "^1.3.0",
+    "socket.io": "^4.6.1",
     "util": "^0.12.5",
     "uuid": "^9.0.0"
   }
