--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "flatted": "^3.2.7",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
