--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "start_socket": "nodemon app.js",
     "build": "tsc",
     "clean": "rimraf build/",
-    "copy-files": "copyfiles -u 1 src/**/**/**/**.json src/**/*.css src/public/**/**/**.html src/public/**/**/**.png src/public/**/**/**.jpg build/src/",
+    "copy-files": "copyfiles -u 1 src/**/**/**/**.json src/**/*.css src/public/**/**/**.html src/public/**/**/**/**/**.png src/public/**/**/**/**/**.jpg build/src/",
     "build-ts": "npm run clean && tsc && npm run copy-files && node build/src/app.js",
     "socket-ts": "tsc && node build/src/app.js"
   },
