--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "clean": "rimraf build/",
     "copy-files": "copyfiles -u 1 src/**/**/**/**.json src/**/*.css src/public/**/**/**.html src/public/**/**/**/**/**.png src/public/**/**/**/**/**.jpg build/src/",
     "build-ts": "npm run clean && tsc && npm run copy-files && node build/src/app.js",
+    "dbg-lapek": "npm run clean && tsc && npm run copy-files && cd /home/olek/solo_projekty/boss-monster-ts ; /usr/bin/env 'NODE_OPTIONS=--require /home/olek/.vscode-server/bin/6445d93c81ebe42c4cbd7a60712e0b17d9463e97/extensions/ms-vscode.js-debug/src/bootloader.js --inspect-publish-uid=http' 'VSCODE_INSPECTOR_OPTIONS={\"inspectorIpc\":\"/tmp/node-cdp.2349-b55ef6af-19.sock\",\"deferredMode\":false,\"waitForDebugger\":\"\",\"execPath\":\"/home/olek/.nvm/versions/node/v16.17.1/bin/node\",\"onlyEntrypoint\":false,\"autoAttachMode\":\"always\",\"mandatePortTracking\":true,\"fileCallback\":\"/tmp/node-debug-callback-02606bc870d23ef5\"}' /home/olek/.nvm/versions/node/v16.17.1/bin/node ./backend/build/src/app.js",
     "socket-ts": "tsc && node build/src/app.js"
   },
   "dependencies": {
