--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "ansi-escapes": "^6.0.0",
+    "axios": "^1.4.0",
     "chai": "^4.3.7",
     "chai-spies": "^1.0.0",
     "circular-json": "^0.5.9",
@@ -29,6 +30,7 @@
     "json-stringify-safe": "^5.0.1",
     "mocha": "^10.2.0",
     "morgan": "~1.9.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^2.0.20",
     "prompt": "^1.3.0",
     "socket.io": "^4.6.1",
