--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    environment:
+      REACT_APP_BACKEND_URL: https://boss-monster-backend.adrwal.pl
     ports:
       - "3006:3006"
     depends_on:
