--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,6 @@
     "@types/express": "^4.17.17",
     "ansi-escapes": "^6.0.0",
     "axios": "^1.4.0",
-    "chai": "^4.3.7",
     "chai-spies": "^1.0.0",
     "circular-json": "^0.5.9",
     "clear": "^0.1.0",
@@ -29,7 +28,6 @@
     "flatted": "^3.2.7",
     "inquirer": "^9.1.4",
     "json-stringify-safe": "^5.0.1",
-    "mocha": "^10.2.0",
     "morgan": "~1.9.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^2.0.20",
@@ -37,14 +35,18 @@
     "socket.io": "^4.6.1",
     "ts-node-dev": "^2.0.0",
     "tsc-hooks": "^1.1.2",
-    "typescript": "^5.1.6",
     "util": "^0.12.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.1",
+    "@types/chai": "^4.3.16",
+    "@types/mocha": "^10.0.7",
     "@types/node": "^20.14.9",
+    "chai": "^5.1.1",
     "copyfiles": "^2.4.1",
-    "rimraf": "^5.0.1"
+    "mocha": "^10.5.2",
+    "rimraf": "^5.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3"
   }
 }
