--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "@types/chai": "^4.3.16",
     "@types/mocha": "^10.0.7",
     "@types/node": "^20.14.9",
+    "@types/uuid": "^10.0.0",
     "chai": "^5.1.1",
     "copyfiles": "^2.4.1",
     "mocha": "^10.5.2",
