--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,10 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.16",
+    "@types/circular-json": "^0.4.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/mocha": "^10.0.7",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.9",
     "@types/uuid": "^10.0.0",
     "chai": "^5.1.1",
